# matrices-opencl

./: CMakeLists.txt  CMakeSettings.json
inc/: Computing.h
src/: Computing.cpp  kernel.cl  main.cpp
